# hermes-rheo

./: .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  azure-pipelines.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: release.yml  test.yml
docs/source/: background.rst  conf.py  file_readers.rst  hermes_rheo.functions.rst  hermes_rheo.rst  hermes_rheo.transforms.rst  index.rst  modules.rst  quickstart.rst  readers.rst  transforms.rst  tutorials.rst  usage.rst
paper/: paper.bib  paper.md
src/hermes_rheo/file_readers/: trios_rheo_txt.py
src/hermes_rheo/functions/: batch_processing.py  crs.py  plotting.py
src/hermes_rheo/transforms/: automated_mastercurve.py  mutation_number.py  owchirp_generation.py  rheo_analysis.py  states_to_conditions.py
tests/fileio/: conftest.py  test_stress_controlled_experiment.py  test_trios_rheo_txt.py  test_tts.py
tests/fileio/test_data/: test_frequency_sweep_tts_ARES.txt
tutorial_notebooks/: 032-Hermes - 02244-1 chirp phi 90- 2024.05.22.ipynb  1_ read and visualize common rheological datasets.ipynb  1_ read and visualize rheological data.ipynb  2_owchirp wave design.ipynb  2_owchirp_wave_design.ipynb  2_read and visualize data from OWChirp experiments.ipynb  3_read and visualize data from OWChirp experiments.ipynb  4_time temperature superposition.ipynb  5_ time curing superposition.ipynb  6_mutation number calculation.ipynb  check_signals.ipynb  chirp_waveform_data.txt  fourier_space_analysis-padding.ipynb
tutorial_notebooks/tutorial_data/tutorial_2/: owchirp_parameters.txt
tutorial_notebooks/tutorial_data/tutorial_3/: owchirp_tts.txt
tutorial_notebooks/tutorial_data/tutorial_3/plots/: plot_video.avi
