[metadata]
name = hermes_rheo
version = 0.0.0
description = 'Change description'
long_description = file: README.md
project_urls = Source = https://github.mmm.com/CRAL/hermes
author = Alessandro Perego <aperego@mmm.com>,
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Information Analysis
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: Other/Proprietary
license = Proprietary

[options]
zip_safe = false
install_requires =
    matplotlib
    numpy
    pandas
    scipy
    openpyxl
python_requires = >=3.7,<3.11
packages = find:
package_dir = =src

[options.packages.find]
where = src