[metadata]
name = hermes_rheo
version = 1.0.11
description = piblin transforms tailored for advanced rheological analysis
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Source = https://github.com/3mcloud/hermes-rheo
author = Alessandro Perego <aperego@mmm.com>
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Information Analysis
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License

[options]
zip_safe = false
install_requires =
    piblin
    matplotlib<3.9.0
    numpy>=1.21,<2.0
    pandas
    scipy<1.14
    openpyxl
    mastercurves
    sphinx
    sphinx_rtd_theme

python_requires = >=3.8,<3.12
packages = find:
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
